Added cameras checkboxes

--- a/src/main/resources/templates/advancedsearch.html
+++ b/src/main/resources/templates/advancedsearch.html
@@ -24,9 +24,57 @@
             <label class="btn btn-outline-primary" for="spirit">Spirit</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" th:field="${homeDto.flexCheckDefault}" type="checkbox">
-            <label class="form-check-label" for="flexCheckDefault">
-                Default checkbox
+            <input class="form-check-input" th:field="${homeDto.cameraFhaz}" type="checkbox">
+            <label class="form-check-label" for="cameraFhaz1">
+                Front Hazard Avoidance Camera
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraRhaz}" type="checkbox">
+            <label class="form-check-label" for="cameraRhaz1">
+                Rear Hazard Avoidance Camera
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraMast}" type="checkbox">
+            <label class="form-check-label" for="cameraMast1">
+                Mast Camera
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraChemcam}" type="checkbox">
+            <label class="form-check-label" for="cameraChemcam1">
+                Chemistry and Camera Complex
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraMahli}" type="checkbox">
+            <label class="form-check-label" for="cameraMahli1">
+                Mars Hand Lens Imager
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraMardi}" type="checkbox">
+            <label class="form-check-label" for="cameraMardi1">
+                Mars Descent Imager
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraNavcam}" type="checkbox">
+            <label class="form-check-label" for="cameraNavcam1">
+                Navigation Camera
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraPancam}" type="checkbox">
+            <label class="form-check-label" for="cameraPancam1">
+                Panoramic Camera
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" th:field="${homeDto.cameraMinites}" type="checkbox">
+            <label class="form-check-label" for="cameraMinites1">
+                Miniature Thermal Emission Spectrometer(Mini-TES)
             </label>
         </div>
 
