--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <form method="get" action="" id="formRover">
                 <input type="hidden" id="apiRoverData" name="apiRoverData" value=""/>
                 <div class="btn-group bt-group-lg" role="group" aria-label="Basic radio toggle button group" style="margin: 2em 0em">
-                    <input type="radio" class="btn-check" name="btnradio" id="curiosity" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="btnradio" id="curiosity" autocomplete="off">
                     <label class="btn btn-outline-primary" for="curiosity">Curiosity</label>
 
                     <input type="radio" class="btn-check" name="btnradio" id="opportunity" autocomplete="off">
