--- a/src/main/resources/templates/advancedsearch.html
+++ b/src/main/resources/templates/advancedsearch.html
@@ -1,8 +1,16 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>MarsPhotos</title>
+<!--    <link rel="stylesheet" type="text/css" href="style.css">-->
+    <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"/>
+
+
+
+
+
 </head>
 <body>
 
@@ -89,24 +97,45 @@
     </form>
 
 
-    <div th:each="index:${#numbers.sequence(0,roverData.photos.size(),4)}" class="row" style="margin-bottom: 2em">
-        <div class="col-sm" th:if="${index<roverData.photos.size}">
-            <img th:src="${roverData.photos[index].imgSrc}" class="img-fluid"/>
-        </div>
-        <div class="col-sm" th:if="${index+1<roverData.photos.size}">
-            <img th:src="${roverData.photos[index+1].imgSrc}" class="img-fluid"/>
-        </div>
-        <div class="col-sm" th:if="${index+2<roverData.photos.size}">
-            <img th:src="${roverData.photos[index+2].imgSrc}" class="img-fluid"/>
-        </div>
-        <div class="col-sm" th:if="${index+3<roverData.photos.size}">
-            <img th:src="${roverData.photos[index+3].imgSrc}" class="img-fluid"/>
-        </div>
-    </div>
+
+   <div class="gallery">
+       <div th:each="index:${#numbers.sequence(0,roverData.photos.size(),4)}" class="row" style="margin-bottom: 2em" >
+           <div class="col-sm" th:if="${index<roverData.photos.size}">
+
+
+                   <img th:src="${roverData.photos[index].imgSrc}" class="img-fluid" alt="photo"/>
+
+           </div>
+           <div class="col-sm" th:if="${index+1<roverData.photos.size}">
+
+                   <img th:src="${roverData.photos[index+1].imgSrc}" class="img-fluid" alt="photo" />
+
+           </div>
+           <div class="col-sm" th:if="${index+2<roverData.photos.size}">
+
+
+                   <img th:src="${roverData.photos[index+2].imgSrc}" class="img-fluid" alt="photo"/>
+
+           </div>
+           <div class="col-sm" th:if="${index+3<roverData.photos.size}">
+
+
+                   <img th:src="${roverData.photos[index+3].imgSrc}" class="img-fluid" alt="photo"/>
+
+           </div>
+       </div>
+   </div>
+
+
 </div>
 
 <script type="text/javascript" src="/advancedsearch.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
 </body>
 </html>
