--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
     <head>
         <title>MarsPhotos</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"/>
+<!--        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--              integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"/>-->
+
     </head>
     <body>
 
@@ -28,24 +29,31 @@
                 </div>
             </form>
 
-
-            <div th:each="index:${#numbers.sequence(0,roverData.photos.size(),4)}" class="row" style="margin-bottom: 2em">
-                <div class="col-sm" th:if="${index<roverData.photos.size}">
-                    <img th:src="${roverData.photos[index].imgSrc}" class="img-fluid"/>
-                </div>
-                <div class="col-sm" th:if="${index+1<roverData.photos.size}">
-                    <img th:src="${roverData.photos[index+1].imgSrc}" class="img-fluid"/>
-                </div>
-                <div class="col-sm" th:if="${index+2<roverData.photos.size}">
-                    <img th:src="${roverData.photos[index+2].imgSrc}" class="img-fluid"/>
-                </div>
-                <div class="col-sm" th:if="${index+3<roverData.photos.size}">
-                    <img th:src="${roverData.photos[index+3].imgSrc}" class="img-fluid"/>
-                </div>
+            <div class="grid">
+                <img th:each="photo: ${roverData.photos}" th:src="${photo.imgSrc}}"/>
             </div>
+
+
+<!--            <div th:each="index:${#numbers.sequence(0,roverData.photos.size(),4)}" class="row" style="margin-bottom: 2em">-->
+<!--                <div class="col-sm" th:if="${index<roverData.photos.size}">-->
+<!--                    <img th:src="${roverData.photos[index].imgSrc}" class="img-fluid"/>-->
+<!--                </div>-->
+<!--                <div class="col-sm" th:if="${index+1<roverData.photos.size}">-->
+<!--                    <img th:src="${roverData.photos[index+1].imgSrc}" class="img-fluid"/>-->
+<!--                </div>-->
+<!--                <div class="col-sm" th:if="${index+2<roverData.photos.size}">-->
+<!--                    <img th:src="${roverData.photos[index+2].imgSrc}" class="img-fluid"/>-->
+<!--                </div>-->
+<!--                <div class="col-sm" th:if="${index+3<roverData.photos.size}">-->
+<!--                    <img th:src="${roverData.photos[index+3].imgSrc}" class="img-fluid"/>-->
+<!--                </div>-->
+<!--            </div>-->
+
+
         </div>
 
         <script type="text/javascript" src="/index.js"></script>
+
 
     </body>
 </html>
